--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -8,6 +8,7 @@
       </li>
     </ul>
     <span class="status-desc" *ngIf="status !== undefined"><i class="fas fa-circle" [ngClass]="(status===true)?'recording':'stopped'"></i></span>
+    <span class="status-desc" *ngIf="!status"><i class="fas fa-circle" [ngClass]="'stopped'"></i></span>
 
     <div>
       <app-info-modal></app-info-modal>
