--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -11,7 +11,7 @@
     <span class="status-desc" *ngIf="!status"><i class="fas fa-circle" [ngClass]="'stopped'"></i></span>
 
     <div>
-      <app-info-modal></app-info-modal>
+      <app-info-modal [proxyInfo]="proxyInfo"></app-info-modal>
     </div>
   </div>
 </nav>
