--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,10 @@
 
+.main {
+  padding-left: 200px;
+  padding-right: 200px;
+  background-color: white;
+  padding-top: 25px;
+  min-height: 100%;
+  width: 100%;;
+  position: absolute;
+}
