--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-top-panel></app-top-panel>
-<app-endpoints></app-endpoints>
+<div class="main">
+    <app-connection-chart></app-connection-chart>
+    <app-endpoints></app-endpoints>
+</div>
 
 <router-outlet></router-outlet>
