--- a/src/app/endpoints/endpoints.component.html
+++ b/src/app/endpoints/endpoints.component.html
@@ -1,4 +1,4 @@
-<div class="main content-container">
+<div class="content-container">
   <div class="container-fluid">
     <div class="row">
       <div class="col">
