--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-top-panel></app-top-panel>
-<app-endpoints></app-endpoints>
+<div class="content-container">
+    <div class="container-fluid">
+        <app-endpoints></app-endpoints>
+    </div>
+</div>
+
 
 <router-outlet></router-outlet>
