--- a/src/app/endpoints/endpoints.component.css
+++ b/src/app/endpoints/endpoints.component.css
@@ -1,15 +1,6 @@
-.main {
-  padding-left: 200px;
-  padding-right: 200px;
-  background-color: white;
-  padding-top: 25px;
-  min-height: 100%;
-  width: 100%;;
-  position: absolute;
-}
-
 .endpoints {
   border: none;
+  padding-top: 20px
 }
 
 .endpoints .card-body {
