--- a/src/app/endpoints/endpoints.component.html
+++ b/src/app/endpoints/endpoints.component.html
@@ -1,69 +1,66 @@
-<div class="main content-container">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <div class="card endpoints">
-          <div class="card-header">
-            <form class="form-inline-sm" style="float: right">
-              <div class="input-group input-group-sm">
-                <input class="form-control" id="label-filter" type="search" placeholder="search address"
-                  (keyup)='search($event.target.value)'>
-                <div class="input-group-append">
-                  <button class="btn tools refresh" type="button" (click)="refresh()"><i class="fas fa-redo-alt"></i> refresh</button>
-                </div>
-                <div class="input-group-append">
-                  <button class="btn tools clear-all" type="button" (click)="clearAll()"><i class="fas fa-trash"></i> clear all</button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="card-body ">
-            <div class="table-responsive">
-              <table class="table items" [mfData]="endpointsFiltered" #mf="mfDataTable">
-                <thead>
-                  <tr>
-                    <th scope="col" class="head">
-                      <mfDefaultSorter by="id">id</mfDefaultSorter>
-                    </th>
-                    <th scope="col" class="head">
-                      <mfDefaultSorter by="name">address</mfDefaultSorter>
-                    </th>
-                    <th scope="col" class="head">
-                      <mfDefaultSorter by="connections">connections</mfDefaultSorter>
-                    </th>
-                    <th scope="col" class="head">
-                      status
-                    </th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngIf="!endpointList || endpointList.length === 0">
-                    <td colspan="4" class="text-muted no-data">No Data...</td>
-                  </tr>
-                  <tr *ngFor="let _ of mf.data;">
-                    <td class="ellipsis">
-                      {{_.id}}
-                    </td>
-                    <td>
-                      {{_.name}}
-                    </td>
-                    <td class="ellipsis">
-                      {{_.connections}}
-                    </td>
-                    <td>
-                      <select type="text" (change)="changeStatus($event.target.value, _.id)" [ngStyle]="{'background-color': getColor(_.actualStatus)}" > 
-                        <option *ngFor="let status of orderStatuses(_.actualStatus)" [value]="status">{{status}}</option>
-                      </select>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+<div class="row">
+  <div class="col">
+    <div class="card endpoints">
+      <div class="card-header">
+        <form class="form-inline-sm" style="float: right">
+          <div class="input-group input-group-sm">
+            <input class="form-control" id="label-filter" type="search" placeholder="search address"
+              (keyup)='search($event.target.value)'>
+            <div class="input-group-append">
+              <button class="btn tools refresh" type="button" (click)="refresh()"><i class="fas fa-redo-alt"></i>
+                refresh</button>
+            </div>
+            <div class="input-group-append">
+              <button class="btn tools clear-all" type="button" (click)="clearAll()"><i class="fas fa-trash"></i> clear
+                all</button>
             </div>
           </div>
+        </form>
+      </div>
+      <div class="card-body ">
+        <div class="table-responsive">
+          <table class="table items" [mfData]="endpointsFiltered" #mf="mfDataTable">
+            <thead>
+              <tr>
+                <th scope="col" class="head">
+                  <mfDefaultSorter by="id">id</mfDefaultSorter>
+                </th>
+                <th scope="col" class="head">
+                  <mfDefaultSorter by="name">address</mfDefaultSorter>
+                </th>
+                <th scope="col" class="head">
+                  <mfDefaultSorter by="connections">connections</mfDefaultSorter>
+                </th>
+                <th scope="col" class="head">
+                  status
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngIf="!endpointList || endpointList.length === 0">
+                <td colspan="4" class="text-muted no-data">No Data...</td>
+              </tr>
+              <tr *ngFor="let _ of mf.data;">
+                <td class="ellipsis">
+                  {{_.id}}
+                </td>
+                <td>
+                  {{_.name}}
+                </td>
+                <td class="ellipsis">
+                  {{_.connections}}
+                </td>
+                <td>
+                  <select type="text" (change)="changeStatus($event.target.value, _.id)"
+                    [ngStyle]="{'background-color': getColor(_.actualStatus)}">
+                    <option *ngFor="let status of orderStatuses(_.actualStatus)" [value]="status">{{status}}</option>
+                  </select>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
-
   </div>
-
 </div>
