--- a/src/app/endpoints/endpoints.component.html
+++ b/src/app/endpoints/endpoints.component.html
@@ -14,6 +14,9 @@
               <button class="btn tools clear-all" type="button" (click)="clearAll()"><i class="fas fa-trash"></i> clear
                 all</button>
             </div>
+            <div class="input-group-append">
+                <button class="btn tools autorefresh" type="button" (click)="changeAuroRefresh()" >auto refresh: {{autoRefresh === true ? 'ON ' : 'OFF'}}</button>
+            </div>
           </div>
         </form>
       </div>
