autorefresh css updates

--- a/src/app/endpoints/endpoints.component.html
+++ b/src/app/endpoints/endpoints.component.html
@@ -15,7 +15,7 @@
                 all</button>
             </div>
             <div class="input-group-append">
-                <button class="btn tools autorefresh" type="button" (click)="changeAuroRefresh()" >auto refresh: {{autoRefresh === true ? 'ON ' : 'OFF'}}</button>
+                <button class="btn tools autorefresh" type="button" (click)="changeAuroRefresh()">auto refresh: <span [className]="autoRefresh === true ? 'on' : 'off'">{{autoRefresh === true ? 'ON ' : 'OFF'}}</span></button>
             </div>
           </div>
         </form>
