--- a/src/app/endpoints/endpoints.component.css
+++ b/src/app/endpoints/endpoints.component.css
@@ -74,7 +74,7 @@ td {
   color: red
 }
 
-.refresh:hover {
+.refresh:hover, .autorefresh:hover {
   color: #0052CC;
 }
 
@@ -85,6 +85,14 @@ td {
 
 .items {
   margin-top: 25px;
+}
+
+.on {
+  color: green
+}
+
+.off {
+  color: red
 }
 
 input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
