--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -4,10 +4,15 @@
   <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-    
+
       </li>
     </ul>
-    <span class="status-desc" *ngIf="status !== undefined"><i class="fas fa-circle" [ngClass]="(status===true)?'recording':'stopped'"></i></span>
+    <button [disabled]="autoRefresh" class="btn refresh btn-sm" type="button" (click)="loadData()"><i class="fas fa-redo-alt"></i>
+      refresh</button>
+    <button class="btn autorefresh text-white btn-sm" title="auto refresh" type="button" (click)="changeAutoRefresh()"><span
+        [className]="autoRefresh === true ? 'on' : 'off'"><i class="fas fa-sync"></i> auto refresh</span></button>
+    <span class="status-desc" *ngIf="status !== undefined"><i class="fas fa-circle"
+        [ngClass]="(status===true)?'recording':'stopped'"></i></span>
     <span class="status-desc" *ngIf="!status"><i class="fas fa-circle" [ngClass]="'stopped'"></i></span>
     <div>
       <app-info-modal [proxyInfo]="proxyInfo"></app-info-modal>
