--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,8 @@
 .content-container {
   padding-left: 200px;
   padding-right: 200px;
-  background-color: white;
-  padding-top: 25px;
+  background-color: #f0f1f4;
+  padding-top: 75px;
   min-height: 100%;
   width: 100%;;
   position: absolute;
