--- a/src/app/connection-chart/connection-chart.component.html
+++ b/src/app/connection-chart/connection-chart.component.html
@@ -1,7 +1,12 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
+<div class="row">
+  <div class="col">
+    <div class="card connections">
+      <div class="card-header">
+        <h6>Connection Chart</h6>
+      </div>
+      <div class="card-body">
         <div id="container" class="connection-chart" [chart]="connectionChart"></div>
+      </div>
     </div>
   </div>
 </div>
