--- a/src/app/endpoints/endpoints.component.css
+++ b/src/app/endpoints/endpoints.component.css
@@ -1,10 +1,14 @@
 .endpoints {
   border: none;
-  padding-top: 20px
+  margin-top: 20px
 }
 
 .endpoints .card-body {
   padding-top: 0.2rem;
+}
+
+.endpoints .header-text {
+  display: inline
 }
 
 tbody tr:hover {
@@ -13,9 +17,10 @@ tbody tr:hover {
 }
 
 .endpoints .card-header {
+  border-top: #2684FF solid;
   background-color: white;
-  color: white;
-  border: none;
+  border-bottom: none;
+  color: #253858;
 }
 
 td {
@@ -70,9 +75,7 @@ td {
   -moz-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
 }
 
-.clear-all:hover {
-  color: red
-}
+
 
 
 .items {
