--- a/src/app/endpoints/endpoints.component.html
+++ b/src/app/endpoints/endpoints.component.html
@@ -2,21 +2,15 @@
   <div class="col">
     <div class="card endpoints">
       <div class="card-header">
-        <form class="form-inline-sm" style="float: right">
+        <h6 class="header-text">Endpoints</h6>
+        <form class="form-inline" style="float: right">
           <div class="input-group input-group-sm">
             <input class="form-control" id="label-filter" type="search" placeholder="search address"
               (keyup)='search($event.target.value)'>
-            <div class="input-group-append">
-            </div>
-            <div class="input-group-append">
-              <button class="btn tools clear-all" title="auto-refresh" type="button" (click)="clearAll()"><i
-                  class="fas fa-trash"></i> clear
-                all</button>
-            </div>
           </div>
         </form>
       </div>
-      <div class="card-body ">
+      <div class="card-body">
         <div class="table-responsive">
           <table class="table items" [mfData]="endpointsFiltered" #mf="mfDataTable">
             <thead>
@@ -50,10 +44,12 @@
                   {{_.connections}}
                 </td>
                 <td>
-                  <div ngbDropdown class="d-inline-block">
-                    <button [ngStyle]="{'background-color': getColor(_.actualStatus)}" (click)="onFocus()" (focusout)="outFocus()" class="btn btn-sm" id="dropdownBasic1" ngbDropdownToggle>{{_.actualStatus}}</button>
+                  <div ngbDropdown class="d-inline-block" (openChange)="toggled($event)">
+                    <button [ngStyle]="{'background-color': getColor(_.actualStatus)}" class="btn btn-sm"
+                      id="dropdownBasic1" ngbDropdownToggle>{{_.actualStatus}}</button>
                     <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                      <button class="btn btn-sm" *ngFor="let status of orderStatuses(_.actualStatus)" (click)="changeStatus(status, _.id)" ngbDropdownItem>{{status}}</button>
+                      <button class="btn btn-sm" *ngFor="let status of orderStatuses(_.actualStatus)"
+                        (click)="changeStatus(status, _.id)" ngbDropdownItem>{{status}}</button>
                     </div>
                   </div>
                 </td>
