--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg top-bar">
+<nav class="navbar navbar-expand-lg top-bar fixed-top">
   <a class="navbar-brand text-white" routerLink="/" routerLinkActive="active">Spoiler Proxy</a>
 
   <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
@@ -7,10 +7,15 @@
 
       </li>
     </ul>
-    <button [disabled]="autoRefresh" class="btn refresh btn-sm" type="button" (click)="loadData()"><i class="fas fa-redo-alt"></i>
+    <button [disabled]="autoRefresh" class="btn refresh btn-sm" type="button" (click)="loadData()"><i
+        class="fas fa-redo-alt"></i>
       refresh</button>
-    <button class="btn autorefresh text-white btn-sm" title="auto refresh" type="button" (click)="changeAutoRefresh()"><span
-        [className]="autoRefresh === true ? 'on' : 'off'"><i class="fas fa-sync"></i> auto refresh</span></button>
+    <button class="btn autorefresh text-white btn-sm" title="auto refresh" type="button"
+      (click)="changeAutoRefresh()"><span [className]="autoRefresh === true ? 'on' : 'off'"><i class="fas fa-sync"></i>
+        auto refresh</span></button>
+    <button class="btn tools clear-all btn-sm" title="auto-refresh" type="button" (click)="clearAll()"><i
+        class="fas fa-trash"></i> clear
+      all</button>
     <span class="status-desc" *ngIf="status !== undefined"><i class="fas fa-circle"
         [ngClass]="(status===true)?'recording':'stopped'"></i></span>
     <span class="status-desc" *ngIf="!status"><i class="fas fa-circle" [ngClass]="'stopped'"></i></span>
