--- a/src/app/connection-chart/connection-chart.component.html
+++ b/src/app/connection-chart/connection-chart.component.html
@@ -5,7 +5,7 @@
         <h6>Connection Chart</h6>
       </div>
       <div class="card-body">
-        <div id="container" class="connection-chart" [chart]="connectionChart"></div>
+        <div id="container" class="connection-chart"></div>
       </div>
     </div>
   </div>
