--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-top-panel></app-top-panel>
 <div class="content-container">
     <div class="container-fluid">
+        <app-connection-chart></app-connection-chart>
         <app-endpoints></app-endpoints>
     </div>
 </div>
