--- a/src/app/top-panel/top-panel.component.css
+++ b/src/app/top-panel/top-panel.component.css
@@ -25,7 +25,7 @@
 }
 
 .top-bar {
-  background-color: #0052CC;
+  background-color: rgba(9, 30, 66);
 }
 
 
@@ -158,3 +158,33 @@ a {
 		box-shadow: 0px 0px 5px 13px rgba(16, 165, 74,0);
 	}
 }
+
+.on {
+  color: #28a745
+}
+
+.off {
+  color: #bdbdbd
+}
+
+.refresh {
+  color: white
+} 
+
+.refresh:hover:enabled {
+  color: #B3D4FF;
+}
+
+.btn:focus, .btn:active:focus, .btn.active:focus{
+  outline:none;
+  box-shadow:none;
+}
+
+.clear-all:hover {
+  color: red
+}
+
+.clear-all {
+  color: white;
+}
+
