--- a/src/app/endpoints/endpoints.component.css
+++ b/src/app/endpoints/endpoints.component.css
@@ -1,10 +1,14 @@
 .endpoints {
   border: none;
-  padding-top: 20px
+  margin-top: 20px
 }
 
 .endpoints .card-body {
   padding-top: 0.2rem;
+}
+
+.endpoints .header-text {
+  display: inline
 }
 
 tbody tr:hover {
@@ -13,9 +17,10 @@ tbody tr:hover {
 }
 
 .endpoints .card-header {
+  border-top: #2684FF solid;
   background-color: white;
-  color: white;
-  border: none;
+  border-bottom: none;
+  color: #253858;
 }
 
 td {
@@ -70,29 +75,11 @@ td {
   -moz-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
 }
 
-.clear-all:hover {
-  color: red
-}
 
-.refresh:hover, .autorefresh:hover {
-  color: #0052CC;
-}
-
-.autorefresh {
-  width: 140px;
-}
 
 
 .items {
   margin-top: 25px;
-}
-
-.on {
-  color: green
-}
-
-.off {
-  color: red
 }
 
 input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
