--- a/src/app/connection-chart/connection-chart.component.css
+++ b/src/app/connection-chart/connection-chart.component.css
@@ -1,9 +1,9 @@
 .connections {
   border: none;
+  margin-top: 10px;
 }
 
 .connections .card-header {
-  border-top: #6554C0 solid;
   background-color: white;
   border-bottom: none;
   color: #253858;
