more descriptive no data message

--- a/src/app/endpoints/endpoints.component.html
+++ b/src/app/endpoints/endpoints.component.html
@@ -31,7 +31,7 @@
             </thead>
             <tbody>
               <tr *ngIf="!endpointList || endpointList.length === 0">
-                <td colspan="4" class="text-muted no-data">No Data...</td>
+                <td colspan="4" class="text-muted no-data">No data. Please redirect traffic from your application to the <a href="https://spoilerproxy.com/redirect-all-traffic-from-your-application-to-spoiler-proxy/">spoiler proxy</a> first.</td>
               </tr>
               <tr *ngFor="let _ of mf.data;">
                 <td class="ellipsis">
