--- a/src/app/endpoints/endpoints.component.css
+++ b/src/app/endpoints/endpoints.component.css
@@ -35,15 +35,6 @@ td {
   min-width: 8rem;
 }
 
-#dropdown{
-  padding: 2px !important;
-  background-color: inherit !important;
-  font-size: 14px;
-}
-
-#dropdown:hover {
-  background-color: inherit !important;
-}
 
 .search-ico {
   background-color: white;
@@ -75,6 +66,14 @@ td {
   -moz-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
 }
 
+.clear:hover {
+  color: red
+}
+
+.btn:focus, .btn:active:focus, .btn.active:focus{
+  outline:none;
+  box-shadow:none;
+}
 
 
 
